--- a/.github/workflows/auto-ghpages.yaml
+++ b/.github/workflows/auto-ghpages.yaml
@@ -1,8 +1,8 @@
 name: "Create dashboard"
-on: 
-  push:
-    branches:
-      - master
+on:
+  schedule:
+  - cron: "30 4 * * *"
+
 jobs:
   build:
     runs-on: ubuntu-latest
