--- a/.github/workflows/auto-ghpages.yaml
+++ b/.github/workflows/auto-ghpages.yaml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
@@ -21,7 +21,7 @@ jobs:
           pip install boto3
 
       - name: Assume AWS Role
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: us-east-1
           role-to-assume: arn:aws:iam::867686887310:role/sagebase-github-oidc-packer-image-deploy
