fix assume role duration
fix the following errors..
```
Could not assume role with OIDC: 2 validation errors detected: Value '600'
at 'durationSeconds' failed to satisfy constraint: Member must have value
greater than or equal to 900;

Value 'GitHubActions-Sage-Bionetworks-IT-imagecentral-dashboard-6749642072'
at 'roleSessionName' failed to satisfy constraint: Member must have length
less than or equal to 64
```

--- a/.github/workflows/auto-ghpages.yaml
+++ b/.github/workflows/auto-ghpages.yaml
@@ -28,8 +28,8 @@ jobs:
         with:
           aws-region: us-east-1
           role-to-assume: arn:aws:iam::867686887310:role/sagebase-github-oidc-packer-image-deploy
-          role-session-name: GitHubActions-${{ github.repository_owner }}-${{ github.event.repository.name }}-${{ github.run_id }}
-          role-duration-seconds: 600
+          role-session-name: GHA-${{ github.repository_owner }}-${{ github.event.repository.name }}-${{ github.run_id }}
+          role-duration-seconds: 900
 
       - name: Run AMI dashboard
         run: |
